# cstd

./: .gitignore  CMakeLists.txt  README.md  build32_standalone.sh  build_standalone.sh  cstd.kdev4  main.c  string_text.txt
include/: compile.h  config.h  container_of.h  debug.h  def.h  endian.h  list.h  trace.h  vector.h  wordsize.h
include/private/: compile.h  linkage_post.h  linkage_pre.h
src/: debug.c  def.c  trace.c  vector.c
std/: std_iterator.c
std/include/: std_def.h  std_iterator.h  std_util.h
